--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/ico" href="favicon.ico" />
 	</head>
 	<body class="is-preload">
 
@@ -20,7 +21,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<!-- <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span> -->
 							<h1 id="title">Joseph Yang</h1>
 							<p>Software Engineer</p>
 						</div>
@@ -41,11 +42,12 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.facebook.com/josephjyang" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://twitter.com/josephjyang" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://instagram.com/josephjyang" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://github.com/josephjyang" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+							<li><a href="mailto:josephjyang@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -60,13 +62,14 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Joe</strong>, a software engineer.</h2>
-								<p>Welcome to my portfolio!<br />
-								Feel free to take a look around.</p>
+								<img src="images/avatar.jpg" alt="Joseph Yang" />
+								<h2 class="alt">Hi! I'm <strong>Joseph</strong>, a software engineer. <br /> I look forward to connecting with you.</h2>
+								<p>Welcome to my portfolio! Feel free to take a look around.</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">My Projects</a>
+								<a href="#portfolio" class="button scrolly">Portfolio</a>
+								<a href="#portfolio" class="button scrolly">Resume</a>
 							</footer>
 
 						</div>
@@ -80,53 +83,50 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Here are some projects I've worked on.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://show-me-my-money.herokuapp.com/" class="image fit"><img src="images/app.png" alt="Show Me My Money" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3>Show Me My Money</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://jyang-clevernote.herokuapp.com/" class="image fit"><img src="images/clevernote.png" alt="Clevernote" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3>Clevernote</h3>
 										</header>
 									</article>
-									<article class="item">
+									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 										<header>
 											<h3>Natoque Vitae</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
+										<a href="https://you-made-the-list.herokuapp.com/" class="image fit"><img src="images/ymtl.png" alt="You Made the List" /></a>
+										<header>
+											<h3>You Made the List</h3>
+										</header>
+									</article>
+									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
 										<header>
 											<h3>Dolor Penatibus</h3>
 										</header>
-									</article>
-									<article class="item">
+									</article> -->
+									<!-- <article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
 										<header>
 											<h3>Orci Convallis</h3>
 										</header>
-									</article>
+									</article> -->
 								</div>
 							</div>
 
@@ -141,14 +141,14 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<img src="images/avatar.jpg" alt="" />
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I'm a software developer with a passion for problem-solving and bringing ideas to life. I have experience building web
+							applications and working with JavaScript, React, Redux, Node, Express, PostgreSQL, Python, Flask, and HTML/CSS. After
+							working for five years in the world of media/advertising, I never thought I'd be where I am today, but I'm so glad that
+							I took the risk to quit my job and venture into a new career path. I've discovered a new passion for software
+							development and am so excited for whatever the future holds. I'm an enthusiastic teammate with a growth mindset, eager
+							to learn and grow from every opportunity.</p>
 
 						</div>
 					</section>
@@ -158,15 +158,12 @@
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>Contact Me</h2>
 							</header>
 
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+							<!-- <p>Reach out.</p> -->
 
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/f/xrgjpyrp">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
@@ -189,7 +186,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Joseph Yang. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
