hover color update

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://show-me-my-money.herokuapp.com/" class="image fit"><img src="images/app.png" alt="Show Me My Money" /></a>
+										<a href="https://show-me-my-money.herokuapp.com/" class="image fit"><img src="images/smmm.gif" alt="Show Me My Money" /></a>
 										<header>
 											<h3>Show Me My Money</h3>
 											<div class="technologies">
@@ -201,18 +201,6 @@
 											</div>
 										</header>
 									</article>
-									<!-- <article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-										<header>
-											<h3>Dolor Penatibus</h3>
-										</header>
-									</article> -->
-									<!-- <article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Orci Convallis</h3>
-										</header>
-									</article> -->
 								</div>
 							</div>
 
