--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 					<div class="col-4 col-12-mobile">
 						<article class="item">
 							<a href="https://you-made-the-list.herokuapp.com/" class="image fit"><img
-									src="images/ymtl.png" alt="You Made the List" /></a>
+									src="images/ymtl.gif" alt="You Made the List" /></a>
 							<header>
 								<h3>You Made the List</h3>
 								<div class="technologies">
