--- a/index.html
+++ b/index.html
@@ -144,6 +144,17 @@
 									src="images/smmm.gif" alt="Show Me My Money" /></a>
 							<header>
 								<h3>Show Me My Money</h3>
+								<ul>
+									<li>Stored user profile pictures in the cloud using AWS S3, reducing server load and allowing users to upload their own
+									images
+									</li>
+									<li>
+										Incorporated React-Redux containers and selectors to design scalable and unidirectional front-end state management
+									</li>
+									<li>
+									Employed Redux state management to simplify React components and directly manage data for form inputs and submissions
+									</li>
+								</ul>
 								<div class="technologies">
 									<img alt="JavaScript" width="25px"
 										src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" />
