project list styling

--- a/index.html
+++ b/index.html
@@ -144,14 +144,14 @@
 									src="images/smmm.gif" alt="Show Me My Money" /></a>
 							<header>
 								<h3>Show Me My Money</h3>
-								<ul>
-									<li>Stored user profile pictures in the cloud using AWS S3, reducing server load and allowing users to upload their own
+								<ul class="project-list">
+									<li class="bullet">Stored user profile pictures in the cloud using AWS S3, reducing server load and allowing users to upload their own
 									images
 									</li>
-									<li>
+									<li class="bullet">
 										Incorporated React-Redux containers and selectors to design scalable and unidirectional front-end state management
 									</li>
-									<li>
+									<li class="bullet">
 									Employed Redux state management to simplify React components and directly manage data for form inputs and submissions
 									</li>
 								</ul>
