add bullets to projects

--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
 							src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlalchemy/sqlalchemy-original.svg" />
 						<img alt="postgreSQL" width="40px"
 							src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" />
-						<img alt="Git" width="40px"
-							src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
+						<img alt="Git" width="40px" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" />
 						<img alt="GitHub" width="40px"
 							src="https://raw.githubusercontent.com/github/explore/78df643247d429f6cc873026c0622819ad797942/topics/github/github.png" />
 						<img alt="Docker" width="40px"
@@ -140,19 +139,22 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://show-me-my-money.herokuapp.com/" class="image fit"><img
-									src="images/smmm.gif" alt="Show Me My Money" /></a>
+							<a href="https://show-me-my-money.herokuapp.com/" class="image fit"><img src="images/smmm.gif"
+									alt="Show Me My Money" /></a>
 							<header>
 								<h3>Show Me My Money</h3>
+								<h4>Mobile Friendly!</h4>
 								<ul class="project-list">
-									<li class="bullet">Stored user profile pictures in the cloud using AWS S3, reducing server load and allowing users to upload their own
-									images
+									<li class="bullet">Stored user profile pictures in the cloud using AWS S3, reducing server load and
+										allowing users to upload their own
+										images
 									</li>
 									<li class="bullet">
-										Incorporated React-Redux containers and selectors to design scalable and unidirectional front-end state management
-									</li>
+										Utilized WebSockets to establish a persistent two-way connection between the browser and server so
+										messages between users can flow in both directions </li>
 									<li class="bullet">
-									Employed Redux state management to simplify React components and directly manage data for form inputs and submissions
+										Employed Redux state management to simplify React components and directly manage data for form
+										inputs and submissions
 									</li>
 								</ul>
 								<div class="technologies">
@@ -179,25 +181,38 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://jyang-clevernote.herokuapp.com/" class="image fit"><img
-									src="images/clevernote.png" alt="Clevernote" /></a>
-							<header>
-								<h3>Clevernote</h3>
+							<a href="https://you-made-the-list.herokuapp.com/" class="image fit"><img src="images/ymtl.gif"
+									alt="You Made the List" /></a>
+									<header>
+								<h3>You Made the List</h3>
+								<ul class="project-list">
+									<li class="bullet">
+										Utilized Redux architecture's unidirectional data flow with React for predictable state updates and
+										reliable DOM rendering
+									</li>
+									<li class="bullet">
+										Implemented custom search on tasks using Redux to update state in accordance with the search input
+									</li>
+									<li class="bullet">
+										Developed user autonomy by linking their tasks and lists to their account, allowing for fast and
+										efficient editing and deletion
+									</li>
+								</ul>
 								<div class="technologies">
 									<img alt="JavaScript" width="25px"
-										src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" />
+									src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" />
 									<img alt="React" width="25px"
-										src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png" />
+									src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png" />
 									<img alt="Redux" width="25px"
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" />
+									src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/redux/redux-original.svg" />
 									<img alt="python" width="25px"
-										src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/python/python.png" />
+									src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/python/python.png" />
 									<img alt="flask" width="25px"
-										src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg" />
+									src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg" />
 									<img alt="Visual Studio Code" width="25px"
-										src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png" />
+									src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/visual-studio-code/visual-studio-code.png" />
 									<img alt="HTML5" width="25px"
-										src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" />
+									src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/html/html.png" />
 									<img alt="CSS3" width="25px"
 										src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/css/css.png" />
 								</div>
@@ -206,10 +221,25 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://you-made-the-list.herokuapp.com/" class="image fit"><img
-									src="images/ymtl.gif" alt="You Made the List" /></a>
+							<a href="https://jyang-clevernote.herokuapp.com/" class="image fit"><img src="images/clevernote.png"
+									alt="Clevernote" /></a>
 							<header>
-								<h3>You Made the List</h3>
+								<h3>Clevernote</h3>
+								<ul class="project-list">
+									<li class="bullet">
+										Adhered to React and ES6 best practices to generate a true single-page reactive web app experience
+										for users exploring
+										various features on their dashboard
+									</li>
+									<li class="bullet">
+										Configured the Node.js backend with PostgreSQL, utilizing the Sequelize ORM for validations and
+										database queries
+									</li>
+									<li class="bullet">
+										Created custom modals using React component architecture allowing for efficient development of forms for account log in,
+										notes, and notebooks
+									</li>
+								</ul>
 								<div class="technologies">
 									<img alt="JavaScript" width="25px"
 										src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png" />
@@ -232,7 +262,7 @@
 						</article>
 					</div>
 				</div>
-
+				
 			</div>
 		</section>
 
@@ -272,11 +302,10 @@
 									class="label">Email</span></a></li>
 						<li><a href="tel:+17345452871" class="icon solid fa-phone"><span class="label">Phone</span></a>
 						</li>
-						<li><a href="https://linkedin.com/in/josephjyang" class="icon brands fa-linkedin"><span
-									class="label">Linked
+						<li><a href="https://linkedin.com/in/josephjyang" class="icon brands fa-linkedin"><span class="label">Linked
 									In</span></a></li>
-						<li><a href="https://angel.co/u/joseph-yang-1" class="icon brands fa-angellist"><span
-									class="label">Angel List</span></a></li>
+						<li><a href="https://angel.co/u/joseph-yang-1" class="icon brands fa-angellist"><span class="label">Angel
+									List</span></a></li>
 						<li><a href="https://github.com/josephjyang" class="icon brands fa-github"><span
 									class="label">Github</span></a>
 						</li>
