update with render URLs

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://show-me-my-money.herokuapp.com/" class="image fit"><img src="images/smmm.gif"
+							<a href="https://show-me-my-money.onrender.com/" class="image fit"><img src="images/smmm.gif"
 									alt="Show Me My Money" /></a>
 							<header>
 								<h3>Show Me My Money</h3>
@@ -179,7 +179,7 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://you-made-the-list.herokuapp.com/" class="image fit"><img src="images/ymtl.gif"
+							<a href="https://you-made-the-list.onrender.com/" class="image fit"><img src="images/ymtl.gif"
 									alt="You Made the List" /></a>
 									<header>
 								<h3>You Made the List</h3>
@@ -217,7 +217,7 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="https://jyang-clevernote.herokuapp.com/" class="image fit"><img src="images/clevernote.png"
+							<a href="https://clevernote-tlbw.onrender.com/" class="image fit"><img src="images/clevernote.png"
 									alt="Clevernote" /></a>
 							<header>
 								<h3>Clevernote</h3>
