--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div id="logo">
 				<!-- <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span> -->
 				<h1 id="title">Joseph Yang</h1>
-				<p>Software Engineer <br /> Seattle, WA</p>
+				<p>Software Engineer <br />Bay Area, CA</p>
 			</div>
 
 			<!-- Nav -->
@@ -85,7 +85,7 @@
 
 				<footer>
 					<a href="#portfolio" class="button scrolly">Portfolio</a>
-					<a href="/josephjyang.github.io/Yang_Joseph_Resume.pdf" class="button scrolly">Resume</a>
+					<a href="/josephjyang.github.io/Resume_Joseph_Yang.pdf" class="button scrolly">Resume</a>
 				</footer>
 				<div id="skills-container">
 					<div id="skills">
